# testspec

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
example/: prd-coupon.md
example/.testspec/: AGENTS.md
example/tests/coupon-system/: analysis.md  analyze_prompt.md  cases.md  cases.xlsx  strategy.md
testspec/: __init__.py  cli.py
testspec/core/: exporter.py  llm.py  workflow.py
testspec/prompts/: templates.py
testspec/scaffold/: AGENTS.md  config.yaml  constitution.md
testspec/scaffold/.cursor/commands/: testspec.analyze.md  testspec.generate.md  testspec.list.md  testspec.review.md  testspec.run.md  testspec.strategy.md
